--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "personal-budget-final",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@std/esm": "^0.26.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
